<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:id="@+id/nom_c"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantite"
        android:inputType="number"
        android:id="@+id/quantite_c"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/monSpinner"
        android:entries="@array/monSpinner"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        android:id="@+id/boutonajouter"
        android:onClick="ajouter_c"
        android:background="@color/colorAccent"/>

</LinearLayout>