<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:showIn="@layout/bouton_ajouter"
    tools:context="com.example.ensai.frigomalin.MainActivity">

    <ImageView
        android:layout_width="183dp"
        android:layout_height="99dp"
        android:src="@mipmap/frigo"
        android:layout_marginLeft="100dp"
        android:id="@+id/imageView"
        android:layout_weight="0.28" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton"
        android:layout_marginLeft="100dp"
        android:layout_weight="0.2"
        android:id="@+id/boutonvisite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:layout_marginLeft="90dp"
        android:layout_weight="0.2"
        android:id="@+id/boutoncourses"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perim"
        android:layout_marginLeft="50dp"
        android:layout_weight="0.2"
        android:id="@+id/boutonperim"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recettes"
        android:layout_weight="0.2"
        android:layout_marginLeft="110dp"
        android:id="@+id/boutonrecettes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ajouter produits"
        android:id="@+id/ajouterProduit"
        android:layout_weight="0.2"
        android:layout_marginLeft="110dp"
        android:onClick="cliqueScan"/>




</LinearLayout>
