<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_voir_produit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ensai.frigomalin.VoirProduit">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@android:color/black"
        android:id="@+id/nom_produit_2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantite"/>
        <Space
            android:layout_width="16dp"
            android:layout_height="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantite_prod"/>

    </LinearLayout>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:id="@+id/categorie"/>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/black"
        android:id="@+id/date_produit_2"/>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/url"
        android:autoLink="web"/>

    <Space
        android:layout_width="16dp"
        android:layout_height="8dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_produit"
        android:textColor="@android:color/white"
        android:id="@+id/ajouter_produit"
        android:onClick="ajouter_prod"
        android:background="@android:color/holo_green_dark"/>
    <Space
        android:layout_width="16dp"
        android:layout_height="8dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer"
        android:textColor="@android:color/white"
        android:id="@+id/supprimer"
        android:onClick="supprimer"
        android:background="@android:color/holo_red_dark"/>





    
</LinearLayout>
